completed dr norman website

--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <html>
 <head>
+<title>
+ My first Page
+</title>
 </head>
 <body>
-<h1>Rajat Saxena</h1>
-<h2>Rohan Kumar</h2>
-<h3>Pritam Kumar</h3>
+<h1 style="color:red;text-align:center;">Rohan </h1>
+
+
+<div style="display:flex;justify-content:space-between;">
+
+<div style="background-color:blue;width:100px;height:100px;">
+Rajat
+</div>
+<div style="background-color:yellow;width:100px;height:100px;">
+Rohan
+</div>
+<div style="background-color:green;width:100px;height:100px;">
+Pritam
+</div>
+<div style="background-color:orange;width:100px;height:100px;">
+Rajiv
+</div>
+
+</div>
+
+
+
+
 </body>
 </html>
